[package]
name = "lunatic-envelop"
description = "A simple library providing a few helper functions for offloading large binary blobs onto another process, reducing overhead on long message chains"
version = "1.0.1"
edition = "2021"
authors = ["Kai Jellinghaus"]
readme = "README.md"
repository = "https://github.com/HurricanKai/lunatic-envelop"
license = "MIT"
categories = ["wasm", "lunatic"]
keywords = ["lunatic", "messaging", "wasm"]

[badges]
maintenance = { status = "as-is" }

[dependencies]
hash-map-id = "0.10.0"
lunatic = "0.11.4"
serde = "1.0.144"
serde_bytes = "0.11.7"
